# l4t_install_gui

./: COPYING  README.md  install.sh  meson.build  org.example.App.json
data/: meson.build  org.example.App.desktop.in  org.example.App.gschema.xml  test.yaml
po/: meson.build
src/: GUIMenuGroup.py  GUIMenuItem.py  GUIMenuPart.py  GenMenu.py  MenuGroup.py  MenuItem.py  l4t_install_gui.in  main.py  meson.build  window.py  window.ui
